--- a/beyondcloseddoors.html
+++ b/beyondcloseddoors.html
@@ -20,7 +20,7 @@
         <header id="header">
           <div class="logo container">
             <div>
-              <h1><a href="index.html" id="logo"></a></h1>
+              <h1><a href="home.html" id="logo"></a></h1>
               <p> Sandgrain Films</p>
             </div>
           </div>
@@ -29,8 +29,8 @@
       <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#main-wrapper">Dogs, Cats, and Scapegoats</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="home.html#main-wrapper">Dogs, Cats, and Scapegoats</a></li>
             <li class="current">
               <a href="#">Beyond Closed Doors</a>
               <ul>
