--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo"></a></h1>
+							<h1><a href="home.html" id="logo"></a></h1>
 							<p> Sandgrain Films</p>
 						</div>
 					</div>
@@ -29,7 +29,7 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
+						<li class="current"><a href="home.html">Home</a></li>
 						<li><a href="#main-wrapper">Dogs, Cats, and Scapegoats</a></li>
 						<li>
 							<a href="beyondcloseddoors.html">Beyond Closed Doors</a>
